k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grupo25
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
         app: grupo25
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: test
           image: localhost:5000/grupo_2_5:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grupo25
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: grupo25
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
